# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cis2_league_contract"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "CryptoSnowPrince <topdirector2017@gmail.com>" ]
description = "CIS2-League-Contract"

[dependencies]
concordium-std = "4.0.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
