# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "versus_league_contract"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "Mage Labs <development@magelabs.net>" ]
description = "Versus-League-Contract"

[features]
default = ["std", "crypto-primitives"]
crypto-primitives = ["concordium-std/crypto-primitives"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-std = {path = "../concordium-rust-smart-contracts/concordium-std", default-features = false}
concordium-cis2 = {path = "../concordium-rust-smart-contracts/concordium-cis2", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
